# komorebi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: README.md  pyproject.toml
core/komorebi/: __init__.py  __main__.py  config.py  emotion.py  orchestrator.py  persona.py  protocol.py  server.py  stream.py
core/komorebi/backends/llm/: __init__.py  base.py  codex.py  echo.py  openai_compatible.py
core/komorebi/backends/stream/: __init__.py  base.py  mock.py  twitch.py  youtube.py
core/komorebi/backends/tts/: __init__.py  base.py  silent.py
core/tests/: test_codex.py  test_emotion.py  test_orchestrator.py  test_stream.py
docs/: architecture.md  avatar-renderers.md  live-streaming.md  persona-pack.md
personas/community/: README.md  _template.persona.yaml  tsumugi.persona.yaml
personas/sample/: hinata.persona.yaml  komorebi.persona.yaml  shiro.persona.yaml
scripts/: generate_demo_gif.py
web/: index.html
web/assets/: README.md
web/src/: main.js  protocol.js  ws.js
web/src/avatar/: AvatarBackend.js  PlaceholderAvatar.js  VrmAvatar.js
