[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "komorebi"
version = "0.0.1"
description = "An open-source AITuber engine that makes AI approachable through animated characters."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Komorebi contributors" }]
keywords = ["aituber", "vtuber", "llm", "live2d", "vrm", "tts", "ai"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/EverMilk/komorebi"
Repository = "https://github.com/EverMilk/komorebi"
Issues = "https://github.com/EverMilk/komorebi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pillow>=10.0",   # scripts/generate_demo_gif.py (docs only)
]

[project.scripts]
komorebi = "komorebi.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["komorebi*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
